# LogR

./: .gitignore  LogR_SPEC.md  README.md
.github/workflows/: release.yml
logr/: package-lock.json  package.json  vite.config.ts
logr/src/: App.tsx  Settings.tsx  index.css
logr/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
logr/src-tauri/capabilities/: default.json
logr/src-tauri/src/: commands.rs  lib.rs  main.rs
logr/src-tauri/src/collectors/: browser.rs  clipboard.rs  context.rs  filesystem.rs  keyboard.rs  mod.rs  screenshot.rs  window.rs
logr/src-tauri/src/prefilter/: mod.rs  rules.rs
logr/src-tauri/src/session/: mod.rs  types.rs
logr/src-tauri/src/state/: mod.rs
logr/src-tauri/src/synthesis/: daily_summary.rs  mod.rs  ollama.rs  openrouter.rs  prompt.rs
logr/src-tauri/src/tray/: mod.rs
logr/src-tauri/src/writer/: mod.rs
