[package]
name = "logr"
version = "0.1.0"
description = "LogR — Passive Knowledge Watcher"
authors = ["Shoumik"]
edition = "2021"

[lib]
name = "logr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# System monitoring
active-win-pos-rs = "0.8"
arboard = "3"
notify = "6"
sysinfo = "0.30"
rdev = "0.5"

# Screen capture (screenshot → Ollama vision → text description)
xcap = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

# HTTP (for Ollama)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windows-specific: UI Automation for browser URL extraction
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
